--- a/src/StyleSheets/DirectoryComponent.css
+++ b/src/StyleSheets/DirectoryComponent.css
@@ -1,6 +1,11 @@
 .moreVacanciesRow{
-    margin-left: 130px !important;
-    margin-top: 20px
+  display: flex;
+}
+
+.moreVacanciesCol{
+  flex: 1;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .card {
@@ -22,4 +27,9 @@
     overflow: hidden;
     width: 200px;
     
+}
+
+.MuiCard-root {
+  overflow: hidden;
+  margin: auto;
 }
