--- a/src/StyleSheets/Modal.css
+++ b/src/StyleSheets/Modal.css
@@ -16,12 +16,9 @@
   border-top-right-radius: 8px;
   display: flex;
   flex-direction: column;
-  flex: 1;
 }
 
-#xButtonRow {
-  flex: 1;
-  padding-bottom: 5px;
+.xButtonRow {
   padding-right: 10px;
   padding-top: 5px;
 }
@@ -46,7 +43,6 @@
 }
 
 #modalTitleRow {
-  flex: 1;
   display: flex;
   padding-bottom: 10px;
 }
@@ -70,20 +66,29 @@
 }
 
 .updateButton {
-  background-color: #e5b85f;
   border-radius: 8px;
   font-family: "Arvo", serif;
-  color: #fcffff !important;
-  font-size: 10px !important;
-  font-weight: bold;
-  border: 1px solid #cccccc !important;
+  font-size: 12px !important;
+  color: #fffdf7 !important;
+  /* font-weight: 700; */
+  border: none;
   width: 60px;
   height: 40px;
-  padding: 0px;
+  padding-top: 2px;
   margin-top: auto;
   margin-bottom: auto;
   justify-self: right;
+  background: #FED760;
+  box-shadow: 3px 3px 4px #FFBF0C;
+  cursor: pointer;
+  text-align: center
 }
+
+.updateButton:hover{
+   background: #FFBF0C;
+   box-shadow: 3px 3px 4px #FED760;
+}
+
 
 #jobInfoScreens {
   height: inherit;
@@ -148,7 +153,6 @@
 
 .colJobInfoOne {
   border-right: 1px solid #cccccc !important;
-  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -200,7 +204,7 @@ a {
   display: flex;
   flex: 1;
   justify-content: flex-end;
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 #logoTitle {
