--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -11,8 +11,6 @@
 
 #rowFilterBarAndButton {
   border-top: 1.5px solid #eaeef6;
-  /* padding-right: 10px;
-  padding-left: 15px */
 }
 
 .studentHomepage {
@@ -69,7 +67,7 @@
   /* background-color: #fcffff; */
   background-clip: padding-box;
   border: none;
-  padding-left: 0px
+  padding-left: 0px;
 }
 
 #btnSearchJob {
@@ -80,28 +78,36 @@
   background-color: #e5b85f;
   color: #052f5f !important;
   margin-top: 22px;
-  padding-left: 13px
+  padding-left: 13px;
 }
 
-.colBtnSearch{
+.colBtnSearch {
   padding-left: 0px;
   padding-right: 0px;
-
 }
 
 /* filteredsearch display */
 
-#titleRow {
-  position: absolute;
-  margin-left: 15px;
-  margin-top: 30px;
+#filterTitleRow {
   font-family: "Arvo", serif;
   color: #052f5f !important;
   font-size: 1.05rem !important;
   font-weight: 400 !important;
   line-height: 1.5 !important;
+  display: flex;
 }
 
+.filteredRows {
+  flex: 1;
+  display: flex;
+}
+
+#filterDisplayCont {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+/* 
 #roleTitle {
   margin-left: 183px;
   position: absolute;
@@ -117,12 +123,6 @@
   position: absolute;
 }
 
-#filteredScroll {
-  position: absolute;
-  margin-top: 70px;
-  margin-left: 45px;
-}
-
 #record #descriptionRecord {
   overflow: hidden;
   white-space: nowrap;
@@ -132,9 +132,9 @@
 #record {
   margin-top: 10px;
   padding-left: 0px;
-}
+} */
 
-.detailsButton {
+#detailsButton {
   border-radius: 8px;
   font-family: "Arvo", serif;
   width: 65px;
@@ -142,5 +142,57 @@
   background-color: #e5b85f;
   color: #052f5f !important;
   font-size: 12px;
-  margin-left: 50px;
+}
+
+#viewDetails {
+  flex: 1;
+  display: flex;
+  /* flex-basis: 10% */
+  justify-content: center;
+  /* padding-right: 15px */
+}
+
+/* .headerTitle{
+  flex-basis: 25%
+} */
+
+#recordMapCont {
+  padding-top: 10px;
+}
+
+#filterCompanyHeader {
+  flex-basis: 22%;
+}
+
+#filterLocationHeader {
+  flex-basis: 19%;
+  padding-left: 50px;
+}
+
+#filterRoleHeader {
+  flex-basis: 20%;
+}
+
+#filterDescHeader {
+  flex-basis: 25%;
+}
+
+#filterRole {
+  flex-basis: 20%;
+}
+
+#filterCompany {
+  flex-basis: 22%;
+}
+
+#filterLocation {
+  flex-basis: 19%;
+  padding-left: 50px;
+}
+
+#filteredJobDescText {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  flex-basis: 25%;
 }
