--- a/src/StyleSheets/Task.css
+++ b/src/StyleSheets/Task.css
@@ -1,14 +1,11 @@
 .addTask {
-  display: inline-block !important;
+  /* display: inline-block !important; */
   border: none !important;
   font-family: "Arvo", serif;
   color: #8a7f7f !important;
   font-size: 15px !important;
 }
 
-#colTaskInput{
-  padding-left: 20px
-}
 
 .taskButton {
   font-size: 0.8rem;
@@ -18,6 +15,7 @@
   background: #fcffff !important;
   border: 1px solid #cccccc !important;
   color: #8a7f7f !important;
+  cursor: pointer;
 }
 
 /* .addTask::placeholder {
@@ -30,12 +28,23 @@
   font-family: "Arvo", serif;
   color: #8a7f7f !important;
   font-size: 15px !important;
-  padding-left: 20px
+  overflow-wrap: break-word;
 }
-
 
 #taskListRow{
-  overflow-y:auto;
-  overflow-x: hidden;
- padding-top: 10px
+  padding-top: 10px
 }
+
+.taskRow{
+  display: flex;
+  padding-bottom: 20px;
+}
+
+#inputTaskField{
+  flex: 1
+}
+
+.displayTaskCont{
+  flex: 1;
+}
+
