--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@ code {
   border-radius: 10px;
 }
 
+.table thead th
+{
+  border:none
+}
+
 .my-custom-scrollbar {
   position: relative;
   height: 150px;
@@ -62,8 +67,21 @@ code {
 }
 
 #btnUpdate {
-  margin-top: 10px !important;
-  border-radius: 10px;
+  margin-top: 10px !important; 
+  border-radius: 8px;
+  font-family: "Arvo", serif;
+  font-size: 12px !important;
+  color: #fffdf7 !important;
+  border: none;
+  width: 100px;
+  padding-top: 2px;
+  margin-top: auto;
+  margin-bottom: auto;
+  justify-self: right;
+  background: #FED760;
+  box-shadow: 3px 3px 4px #FFBF0C;
+  cursor: pointer;
+  text-align: center
 }
 
 #buttonExport {
