--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -128,13 +128,15 @@
   display: none !important;
 }
 
+
 .filteredTitleRows {
   flex: 1;
   display: grid;
   max-width: 1200px;
-  grid-template-areas: "companyTitle roleTitle locationTitle descriptionTitle .";
-  grid-template-columns: repeat(1, 10% 30% 10% 40% 10%);
+  /* grid-template-areas: "companyTitle roleTitle locationTitle descriptionTitle ."; */
+  grid-template-columns: repeat(1, 15% 25% 20% 30% 10%);
   /* grid-template-rows: repeat(1, 100%); */
+  /* grid-template-columns: repeat(5, 20%); */
   width: 100%;
 }
 
@@ -155,7 +157,8 @@
   display: grid;
   /* grid-template-rows: repeat(1, 100%); */
   /* grid-template-rows: repeat(1, 1fr); */
-  grid-template-columns: repeat(1, 10% 30% 10% 40% 10%);
+  grid-template-columns: repeat(1, 15% 25% 20% 30% 10%);
+    /* grid-template-columns: repeat(5, 5%, 1fr, 1fr, 1fr, 1fr); */
   /* grid-row-gap: 1em; */
 }
 
@@ -168,6 +171,7 @@
   margin: 0;
   padding: 5px;
   position: relative;
+  overflow-wrap: break-word;
 }
 
 #btnViewDetails {
