--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -14,7 +14,8 @@
 }
 
 .filterInput{
-  flex: 1
+  flex: 1;
+  padding-left: 20px;
 }
 
 
@@ -22,6 +23,7 @@
   border-top: 1.5px solid #eaeef6;
   padding: 15px;
   display: flex;  
+  padding-left: 22px
 }
 
 .studentHomepage {
@@ -29,7 +31,6 @@
   height: 100%;
   overflow-y: auto;
   overflow-x: auto;
-  /* position: absolute; */
   height: 100vh;
 }
 
@@ -57,6 +58,11 @@
     justify-content: initial !important;
     padding: 15px;
     padding-left: 40px;
+  }
+
+  .filterInput{
+    flex: 1;
+    padding-left: 0px
   }
 }
 
