--- a/src/StyleSheets/Task.css
+++ b/src/StyleSheets/Task.css
@@ -4,6 +4,7 @@
   font-family: "Arvo", serif;
   color: #8a7f7f !important;
   font-size: 15px !important;
+  background-color: white !important;
 }
 
 
@@ -17,12 +18,6 @@
   color: #8a7f7f !important;
   cursor: pointer;
 }
-
-/* .addTask::placeholder {
-  opacity: 1;
-} */
-
-
 
 #allList {
   font-family: "Arvo", serif;
